docs: Java-docs added